--- a/frontend/allpack/indinzi/troup/indinzi.html
+++ b/frontend/allpack/indinzi/troup/indinzi.html
@@ -435,22 +435,22 @@
            
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/home_packages/home.htm">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="about.html">About</a>
+                    <a class="nav-link active" href="/about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="#">Service</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
+                    <a class="nav-link active" href="/packages">Packages</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
+                    <a class="nav-link active" href="/suppliers">Suppliers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Booking</a>
+                    <a class="nav-link active" href="/booking">Booking</a>
                 </li>
             </ul>
         </div>
@@ -500,8 +500,8 @@
             <!-- Umushayayo -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/pic1.jpg" data-lightbox="dance-gallery" data-title="Umushayayo - Graceful Rwandan dance">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/pic1.jpg" class="card-img-top" alt="Umushayayo">
+                  <a href="/allpack/indinzi/assetindinzi/pic1.jpg" data-lightbox="dance-gallery" data-title="Umushayayo - Graceful Rwandan dance">
+                    <img src="/allpack/indinzi/assetindinzi/pic1.jpg" class="card-img-top" alt="Umushayayo">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Umushayayo</h5>
@@ -513,8 +513,8 @@
             <!-- Ikinyemera -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/noella.jpg" data-lightbox="dance-gallery" data-title="Ikinyemera - Celebratory harvest dance">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(noella).jpg" class="card-img-top" alt="Ikinyemera">
+                  <a href="/allpack/indinzi/assetindinzi/noella.jpg" data-lightbox="dance-gallery" data-title="Ikinyemera - Celebratory harvest dance">
+                    <img src="/allpack/indinzi/assetindinzi/Webp.net-resizeimage(noella).jpg" class="card-img-top" alt="Ikinyemera">
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">Ikinyemera</h5>
@@ -526,8 +526,8 @@
             <!-- Ritual Dances -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/patty.jpg" data-lightbox="dance-gallery" data-title="Ritual Dances - Sacred ancestral dances">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(patty).jpg" class="card-img-top" alt="Ritual Dances">
+                  <a href="/allpack/indinzi/assetindinzi/patty.jpg" data-lightbox="dance-gallery" data-title="Ritual Dances - Sacred ancestral dances">
+                    <img src="/allpack/indinzi/assetindinzi/Webp.net-resizeimage(patty).jpg" class="card-img-top" alt="Ritual Dances">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Ritual Dances</h5>
@@ -539,8 +539,8 @@
             <!-- Ingoma -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/pic15.jpg" data-lightbox="dance-gallery" data-title="Ingoma - The powerful drum dance">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(15).jpg" class="card-img-top" alt="Ingoma">
+                  <a href="/allpack/indinzi/assetindinzi/pic15.jpg" data-lightbox="dance-gallery" data-title="Ingoma - The powerful drum dance">
+                    <img src="/allpack/indinzi/assetindinzi/Webp.net-resizeimage(15).jpg" class="card-img-top" alt="Ingoma">
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">Ingoma</h5>
@@ -552,8 +552,8 @@
             <!-- Royal Dances -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/pic.jpg" data-lightbox="dance-gallery" data-title="Royal Dances - Elegant court performances">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/pic.jpg" class="card-img-top" alt="Royal Dances">
+                  <a href="/allpack/indinzi/assetindinzi/pic.jpg" data-lightbox="dance-gallery" data-title="Royal Dances - Elegant court performances">
+                    <img src="/allpack/indinzi/assetindinzi/pic.jpg" class="card-img-top" alt="Royal Dances">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Royal Dances</h5>
@@ -565,8 +565,8 @@
             <!-- Dance of Unity -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/pic13.jpg" data-lightbox="dance-gallery" data-title="Dance of Unity - Celebrating togetherness">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(13).jpg" class="card-img-top" alt="Dance of Unity">
+                  <a href="/allpack/indinzi/assetindinzi/pic13.jpg" data-lightbox="dance-gallery" data-title="Dance of Unity - Celebrating togetherness">
+                    <img src="/allpack/indinzi/assetindinzi/Webp.net-resizeimage(13).jpg" class="card-img-top" alt="Dance of Unity">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Dance of Unity</h5>
@@ -578,8 +578,8 @@
             <!-- Celebration Dance -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/oben.jpg" data-lightbox="dance-gallery" data-title="Celebration Dance - Joyful expressions">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/oben.jpg" class="card-img-top" alt="Celebration Dance">
+                  <a href="/allpack/indinzi/assetindinzi/oben.jpg" data-lightbox="dance-gallery" data-title="Celebration Dance - Joyful expressions">
+                    <img src="/allpack/indinzi/assetindinzi/oben.jpg" class="card-img-top" alt="Celebration Dance">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Celebration Dance</h5>
@@ -591,8 +591,8 @@
             <!-- Cultural Preservation -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/last3.jpg" data-lightbox="dance-gallery" data-title="Cultural Preservation - Passing traditions to new generations">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(last3).jpg" class="card-img-top" alt="Cultural Preservation">
+                  <a href="/allpack/indinzi/assetindinzi/last3.jpg" data-lightbox="dance-gallery" data-title="Cultural Preservation - Passing traditions to new generations">
+                    <img src="/allpack/indinzi/assetindinzi/Webp.net-resizeimage(last3).jpg" class="card-img-top" alt="Cultural Preservation">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Cultural Preservation</h5>
@@ -604,8 +604,8 @@
             <!-- Women's Dance -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/abakobwa.jpg" data-lightbox="dance-gallery" data-title="Women's Dance - Traditional performances by female dancers">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/abakobwa.jpg" class="card-img-top" alt="Women's Dance">
+                  <a href="/allpack/indinzi/assetindinzi/abakobwa.jpg" data-lightbox="dance-gallery" data-title="Women's Dance - Traditional performances by female dancers">
+                    <img src="/allpack/indinzi/assetindinzi/abakobwa.jpg" class="card-img-top" alt="Women's Dance">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Women's Dance</h5>
@@ -617,8 +617,8 @@
             <!-- Community Dance -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(1) (copy).jpg" data-lightbox="dance-gallery" data-title="Community Dance - Bringing people together">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(1) (copy).jpg" class="card-img-top" alt="Community Dance">
+                  <a href="/allpack/indinzi/assetindinzi/Webp.net-resizeimage(1) (copy).jpg" data-lightbox="dance-gallery" data-title="Community Dance - Bringing people together">
+                    <img src="/allpack/indinzi/assetindinzi/Webp.net-resizeimage(1) (copy).jpg" class="card-img-top" alt="Community Dance">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Community Dance</h5>
@@ -629,8 +629,8 @@
             <!-- Community Dance -->
             <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="card">
-                  <a href="/frontend/allpack/indinzi/assetindinzi/gasongo.jpg" data-lightbox="dance-gallery" data-title="Community Dance - Bringing people together">
-                    <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(gasongo).jpg" class="card-img-top" alt="Community Dance">
+                  <a href="/allpack/indinzi/assetindinzi/gasongo.jpg" data-lightbox="dance-gallery" data-title="Community Dance - Bringing people together">
+                    <img src="/allpack/indinzi/assetindinzi/Webp.net-resizeimage(gasongo).jpg" class="card-img-top" alt="Community Dance">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Community Dance</h5>
@@ -654,8 +654,8 @@
                 <!-- Video 1 - Local MP4 -->
                 <div class="col-md-4" data-aos="fade-up">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/indinzi/video_asset/mucyo.mp4" data-fancybox="video-gallery" data-caption="Wedding Buffet Service">
-                            <img src="/frontend/allpack/indinzi/video_asset/mucyo.png" alt="Wedding Buffet Service">
+                        <a href="/allpack/indinzi/video_asset/mucyo.mp4" data-fancybox="video-gallery" data-caption="Wedding Buffet Service">
+                            <img src="/allpack/indinzi/video_asset/mucyo.png" alt="Wedding Buffet Service">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -670,8 +670,8 @@
                 <!-- Video 2 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/indinzi/video_asset/queen.mp4" data-fancybox="video-gallery" data-caption="Plated Dinner Service">
-                            <img src="/frontend/allpack/indinzi/video_asset/Webp.net-resizeimage(olga).png" alt="Plated Dinner Service">
+                        <a href="/allpack/indinzi/video_asset/queen.mp4" data-fancybox="video-gallery" data-caption="Plated Dinner Service">
+                            <img src="/allpack/indinzi/video_asset/Webp.net-resizeimage(olga).png" alt="Plated Dinner Service">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -686,8 +686,8 @@
                 <!-- Video 3 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/indinzi/video_asset/ikanombe.mp4" data-fancybox="video-gallery" data-caption="Cocktail Hour">
-                            <img src="/frontend/allpack/indinzi/video_asset/webamayugi.png" alt="Cocktail Hour">
+                        <a href="/allpack/indinzi/video_asset/ikanombe.mp4" data-fancybox="video-gallery" data-caption="Cocktail Hour">
+                            <img src="/allpack/indinzi/video_asset/webamayugi.png" alt="Cocktail Hour">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -703,7 +703,7 @@
                 <div class="col-md-4" data-aos="fade-up">
                     <div class="video-thumbnail">
                         <a href="/allpack/indinzi/video_asset/umushagiriro.mp4" data-fancybox="video-gallery" data-caption="Dessert Presentation">
-                            <img src="/frontend/allpack/indinzi/video_asset/umushagiriro.png" alt="Dessert Presentation">
+                            <img src="/allpack/indinzi/video_asset/umushagiriro.png" alt="Dessert Presentation">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -719,7 +719,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="video-thumbnail">
                         <a href="/allpack/indinzi/video_asset/umuzungu.mp4" data-fancybox="video-gallery" data-caption="Chef's Special">
-                            <img src="/frontend/allpack/indinzi/video_asset/umuzungu.png" alt="Chef's Special">
+                            <img src="/allpack/indinzi/video_asset/umuzungu.png" alt="Chef's Special">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -734,8 +734,8 @@
                 <!-- Video 6 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/indinzi/video_asset/burnvan.mp4" data-fancybox="video-gallery" data-caption="Client Testimonials">
-                            <img src="/frontend/allpack/indinzi/video_asset/ntwali.jpg" alt="Client Testimonials">
+                        <a href="/allpack/indinzi/video_asset/burnvan.mp4" data-fancybox="video-gallery" data-caption="Client Testimonials">
+                            <img src="/allpack/indinzi/video_asset/ntwali.jpg" alt="Client Testimonials">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
