--- a/frontend/allpack/invitation/inve.html
+++ b/frontend/allpack/invitation/inve.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Invitation</title>
+    <title>Invetation cards</title>
     <!-- Bootstrap CSS -->
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -18,8 +18,8 @@
     />
     <!-- AOS Animation Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <!-- Custom Styles -->
     <style>
         /* Hero Section Styling */
@@ -153,22 +153,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.htm">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="/about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="about.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Packages</a>
+                        <a class="nav-link active" href="/packages">Packages</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/suppliers/supply.html">Suppliers</a>
+                        <a class="nav-link active" href="/suppliers">Suppliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="booking.html">Booking</a>
+                        <a class="nav-link active" href="/booking">Booking</a>
                     </li>
                 </ul>
             </div>
@@ -179,7 +179,7 @@
     <section class="hero-section">
         <!-- Video Background -->
         <video autoplay muted loop>
-            <source src="/frontend/allpack/invitation/invdar/v3.mp4" type="video/mp4">
+            <source src="/allpack/invitation/invdar/v3.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <!-- Hero Content -->
@@ -197,102 +197,102 @@
             <div class="gallery-grid">
                 <!-- Gallery Item 1 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/17.jpg" alt="Elegant Design" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/17.jpg')">
+                    <img src="/allpack/invitation/invdar/17.jpg" alt="Elegant Design" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/17.jpg')">
                     <div class="caption">Timeless beauty for your special day.</div>
                 </div>
                 <!-- Gallery Item 2 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/2.jpg" alt="Modern Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/2.jpg')">
+                    <img src="/allpack/invitation/invdar/2.jpg" alt="Modern Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/2.jpg')">
                     <div class="caption">Sleek and sophisticated for the contemporary couple.</div>
                 </div>
                 <!-- Gallery Item 3 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/18.jpg" alt="Classic Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/18.jpg')">
+                    <img src="/allpack/invitation/invdar/18.jpg" alt="Classic Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/18.jpg')">
                     <div class="caption">A touch of tradition, a lifetime of memories.</div>
                 </div>
                 <!-- Gallery Item 4 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/4.jpg" alt="Luxury Design" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/4.jpg')">
+                    <img src="/allpack/invitation/invdar/4.jpg" alt="Luxury Design" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/4.jpg')">
                     <div class="caption">Opulence and grandeur for a royal celebration.</div>
                 </div>
                 <!-- Gallery Item 5 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/5.jpg" alt="Minimalist Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/5.jpg')">
+                    <img src="/allpack/invitation/invdar/5.jpg" alt="Minimalist Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/5.jpg')">
                     <div class="caption">Less is more: simplicity meets elegance.</div>
                 </div>
                 <!-- Gallery Item 6 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/6.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/6.jpg')">
+                    <img src="/allpack/invitation/invdar/6.jpg" alt="Vintage Theme" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/6.jpg')">
                     <div class="caption">Old-world charm for a timeless celebration.</div>
                 </div>
                 <!-- Gallery Item 7 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/7.jpg" alt="Romantic Flair" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/7.jpg')">
+                    <img src="/allpack/invitation/invdar/7.jpg" alt="Romantic Flair" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/7.jpg')">
                     <div class="caption">Whispers of love in every detail.</div>
                 </div>
                 <!-- Gallery Item 8 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/8.jpg" alt="Rustic Elegance" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/8.jpg')">
+                    <img src="/allpack/invitation/invdar/8.jpg" alt="Rustic Elegance" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/8.jpg')">
                     <div class="caption">Nature-inspired beauty for a heartfelt celebration.</div>
                 </div>
                 <!-- Gallery Item 9 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/9.jpg" alt="Bohemian Vibes" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/9.jpg')">
+                    <img src="/allpack/invitation/invdar/9.jpg" alt="Bohemian Vibes" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/9.jpg')">
                     <div class="caption">Free-spirited and full of love.</div>
                 </div>
                 <!-- Gallery Item 10 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/10.jpg" alt="Garden Glamour" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/10.jpg')">
+                    <img src="/allpack/invitation/invdar/10.jpg" alt="Garden Glamour" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/10.jpg')">
                     <div class="caption">Blooms and beauty for a magical day.</div>
                 </div>
                 <!-- Gallery Item 11 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/11.jpg" alt="Golden Touch" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/11.jpg')">
+                    <img src="/allpack/invitation/invdar/11.jpg" alt="Golden Touch" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/11.jpg')">
                     <div class="caption">Shimmering elegance for a golden celebration.</div>
                 </div>
                 <!-- Gallery Item 12 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/12.jpg" alt="Enchanted Forest" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/12.jpg')">
+                    <img src="/allpack/invitation/invdar/12.jpg" alt="Enchanted Forest" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/12.jpg')">
                     <div class="caption">A fairy tale come to life.</div>
                 </div>
                 <!-- Gallery Item 13 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/13.jpg" alt="Coastal Chic" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/13.jpg')">
+                    <img src="/allpack/invitation/invdar/13.jpg" alt="Coastal Chic" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/13.jpg')">
                     <div class="caption">Breezy and beautiful, like your love story.</div>
                 </div>
                 <!-- Gallery Item 14 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/14.jpg" alt="Winter Wonderland" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/14.jpg')">
+                    <img src="/allpack/invitation/invdar/14.jpg" alt="Winter Wonderland" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/14.jpg')">
                     <div class="caption">Snow-kissed dreams for a magical day.</div>
                 </div>
                 <!-- Gallery Item 15 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/15.jpg" alt="Art Deco Glam" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/15.jpg')">
+                    <img src="/allpack/invitation/invdar/15.jpg" alt="Art Deco Glam" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/15.jpg')">
                     <div class="caption">Roaring twenties, timeless love.</div>
                 </div>
                 <!-- Gallery Item 16 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/16.jpg" alt="Tropical Paradise" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/16.jpg')">
+                    <img src="/allpack/invitation/invdar/16.jpg" alt="Tropical Paradise" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/16.jpg')">
                     <div class="caption">Sunshine and smiles for a tropical celebration.</div>
                 </div>
                 <!-- Gallery Item 17 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/1.jpg" alt="Whimsical Wonder" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/1.jpg')">
+                    <img src="/allpack/invitation/invdar/1.jpg" alt="Whimsical Wonder" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/1.jpg')">
                     <div class="caption">Playful and magical, just like your love.</div>
                 </div>
                 <!-- Gallery Item 18 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/13.jpg" alt="Ethereal Beauty" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/13.jpg')">
+                    <img src="/allpack/invitation/invdar/13.jpg" alt="Ethereal Beauty" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/13.jpg')">
                     <div class="caption">Dreamy and delicate, a vision of love.</div>
                 </div>
                 <!-- Gallery Item 19 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/19.jpg" alt="Regal Affair" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/19.jpg')">
+                    <img src="/allpack/invitation/invdar/19.jpg" alt="Regal Affair" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/19.jpg')">
                     <div class="caption">Fit for royalty, a celebration of love.</div>
                 </div>
                 <!-- Gallery Item 20 -->
                 <div class="gallery-item">
-                    <img src="/frontend/allpack/invitation/invdar/20.jpg" alt="Celestial Charm" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/20.jpg')">
+                    <img src="/allpack/invitation/invdar/20.jpg" alt="Celestial Charm" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/invitation/invdar/20.jpg')">
                     <div class="caption">Love written in the stars.</div>
                 </div>
             </div>
