--- a/frontend/allpack/st/st.html
+++ b/frontend/allpack/st/st.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Invitation</title>
+    <title></title>
     <!-- Bootstrap CSS -->
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -18,8 +18,8 @@
     />
     <!-- AOS Animation Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <!-- Custom Styles -->
     <style>
         .wedding-dress-section {
@@ -83,22 +83,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.htm">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">Services</a>
+                        <a class="nav-link active" href="/about">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Packages</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/suppliers/supply.html">Suppliers</a>
+                        <a class="nav-link active" href="/suppliers">Suppliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="booking.html">Booking</a>
+                        <a class="nav-link active" href="/booking">Booking</a>
                     </li>
                 </ul>
             </div>
@@ -113,7 +113,7 @@
                 <!-- Dress 1 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d1.jpg" alt="Elegant A-Line Dress">
+                        <img src="/allpack/st/datadress/d1.jpg" alt="Elegant A-Line Dress">
                         <div class="card-body">
                             <h5 class="card-title">Elegant A-Line Dress</h5>
                             <p class="card-text">Perfect for a classic and timeless look. This A-line dress features intricate lace detailing and a flowing train.</p>
@@ -123,7 +123,7 @@
                 <!-- Dress 2 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d2.jpg" alt="Modern Mermaid Gown">
+                        <img src="/allpack/st/datadress/d2.jpg" alt="Modern Mermaid Gown">
                         <div class="card-body">
                             <h5 class="card-title">Modern Mermaid Gown</h5>
                             <p class="card-text">A sleek and sophisticated option for the modern bride. This mermaid gown hugs your curves and flares out at the bottom.</p>
@@ -133,7 +133,7 @@
                 <!-- Dress 3 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d4.jpg" alt="Bohemian Chic Dress">
+                        <img src="/allpack/st/datadress/d4.jpg" alt="Bohemian Chic Dress">
                         <div class="card-body">
                             <h5 class="card-title">Bohemian Chic Dress</h5>
                             <p class="card-text">For the free-spirited bride, this bohemian dress features flowing layers, delicate embroidery, and a relaxed fit.</p>
@@ -143,7 +143,7 @@
                 <!-- Dress 4 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d8.jpg" alt="Classic Ball Gown">
+                        <img src="/allpack/st/datadress/d8.jpg" alt="Classic Ball Gown">
                         <div class="card-body">
                             <h5 class="card-title">Classic Ball Gown</h5>
                             <p class="card-text">A timeless choice with a voluminous skirt and fitted bodice, perfect for a fairytale wedding.</p>
@@ -153,7 +153,7 @@
                 <!-- Dress 5 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d6.jpg" alt="Lace Sheath Dress">
+                        <img src="/allpack/st/datadress/d6.jpg" alt="Lace Sheath Dress">
                         <div class="card-body">
                             <h5 class="card-title">Lace Sheath Dress</h5>
                             <p class="card-text">A minimalist yet elegant design with full lace coverage, ideal for a chic and modern bride.</p>
@@ -163,7 +163,7 @@
                 <!-- Dress 6 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d9.jpg" alt="Princess Tulle Dress">
+                        <img src="/allpack/st/datadress/d9.jpg" alt="Princess Tulle Dress">
                         <div class="card-body">
                             <h5 class="card-title">Princess Tulle Dress</h5>
                             <p class="card-text">A dreamy dress with layers of soft tulle and a fitted bodice, perfect for a romantic wedding.</p>
@@ -173,7 +173,7 @@
                 <!-- Dress 7 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/tr1.jpg" alt="Vintage Lace Dress">
+                        <img src="/allpack/st/datadress/tr1.jpg" alt="Vintage Lace Dress">
                         <div class="card-body">
                             <h5 class="card-title">Vintage Lace Dress</h5>
                             <p class="card-text">Inspired by vintage designs, this dress features intricate lace patterns and a classic silhouette.</p>
@@ -183,7 +183,7 @@
                 <!-- Dress 8 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/tr4.jpg" alt="Satin A-Line Dress">
+                        <img src="/allpack/st/datadress/tr4.jpg" alt="Satin A-Line Dress">
                         <div class="card-body">
                             <h5 class="card-title">Satin A-Line Dress</h5>
                             <p class="card-text">A luxurious satin dress with a flattering A-line cut, perfect for a sophisticated bride.</p>
@@ -193,7 +193,7 @@
                 <!-- Dress 9 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/tr2.jpg" alt="Off-Shoulder Ball Gown">
+                        <img src="/allpack/st/datadress/tr2.jpg" alt="Off-Shoulder Ball Gown">
                         <div class="card-body">
                             <h5 class="card-title">Off-Shoulder Ball Gown</h5>
                             <p class="card-text">A stunning off-shoulder design with a voluminous skirt, perfect for a dramatic entrance.</p>
@@ -203,7 +203,7 @@
                 <!-- Dress 10 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/tr5.jpg" alt="Embroidered Mermaid Dress">
+                        <img src="/allpack/st/datadress/tr5.jpg" alt="Embroidered Mermaid Dress">
                         <div class="card-body">
                             <h5 class="card-title">Embroidered Mermaid Dress</h5>
                             <p class="card-text">A glamorous mermaid dress with intricate embroidery, perfect for a red-carpet look.</p>
@@ -213,7 +213,7 @@
                 <!-- Dress 11 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/tr6.jpg" alt="Chiffon A-Line Dress">
+                        <img src="/allpack/st/datadress/tr6.jpg" alt="Chiffon A-Line Dress">
                         <div class="card-body">
                             <h5 class="card-title">Chiffon A-Line Dress</h5>
                             <p class="card-text">A lightweight and flowy chiffon dress, ideal for a beach or outdoor wedding.</p>
@@ -223,7 +223,7 @@
                 <!-- Dress 12 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d12m.jpg" alt="Beaded Ball Gown">
+                        <img src="/allpack/st/datadress/d12m.jpg" alt="Beaded Ball Gown">
                         <div class="card-body">
                             <h5 class="card-title">Beaded Ball Gown</h5>
                             <p class="card-text">A dazzling ball gown with intricate beadwork, perfect for a glamorous wedding.</p>
@@ -233,7 +233,7 @@
                 <!-- Dress 13 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d13.jpg" alt="Lace Fit-and-Flare Dress">
+                        <img src="/allpack/st/datadress/d13.jpg" alt="Lace Fit-and-Flare Dress">
                         <div class="card-body">
                             <h5 class="card-title">Lace Fit-and-Flare Dress</h5>
                             <p class="card-text">A flattering fit-and-flare design with delicate lace, perfect for a romantic wedding.</p>
@@ -243,7 +243,7 @@
                 <!-- Dress 14 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d5m.jpg" alt="Tulle Ball Gown">
+                        <img src="/allpack/st/datadress/d5m.jpg" alt="Tulle Ball Gown">
                         <div class="card-body">
                             <h5 class="card-title">Tulle Ball Gown</h5>
                             <p class="card-text">A dreamy tulle ball gown with a fitted bodice, perfect for a fairytale wedding.</p>
@@ -253,7 +253,7 @@
                 <!-- Dress 15 -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="dress-card">
-                        <img src="/frontend/allpack/st/datadress/d14.jpeg" alt="Satin Mermaid Dress">
+                        <img src="/allpack/st/datadress/d14.jpeg" alt="Satin Mermaid Dress">
                         <div class="card-body">
                             <h5 class="card-title">Satin Mermaid Dress</h5>
                             <p class="card-text">A sleek satin mermaid dress with a modern silhouette, perfect for a chic bride.</p>
@@ -293,11 +293,11 @@
                 <div class="col-md-4">
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled footer-content">
-                        <li><a href="home.htm" class="text-light">Home</a></li>
-                        <li><a href="#" class="text-light">About</a></li>
+                        <li><a href="/home" class="text-light">Home</a></li>
+                        <li><a href="/about" class="text-light">About</a></li>
                         <li><a href="#" class="text-light">Services</a></li>
-                        <li><a href="index.html" class="text-light">Packages</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
+                        <li><a href="/packages" class="text-light">Packages</a></li>
+                        <li><a href="/booking" class="text-light">Booking</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
