--- a/frontend/allpack/mc/mc.html
+++ b/frontend/allpack/mc/mc.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Professional Master of Ceremony services for weddings and events. Book now for an unforgettable experience.">
     <meta name="keywords" content="wedding MC, event host, wedding planner, professional MC">
     <meta name="author" content="Wedding Planner">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
-    <title>Master of Ceremony - Wedding Planner</title>
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <title>Master of Ceremony</title>
     <!-- Bootstrap CSS -->
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -279,22 +279,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.htm">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="/about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">Services</a>
+                        <a class="nav-link active" href="#">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Packages</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/suppliers/supply.html">Suppliers</a>
+                        <a class="nav-link active" href="/suppliers">Suppliers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="booking.html">Booking</a>
+                        <a class="nav-link active" href="/booking">Booking</a>
                     </li>
                 </ul>
             </div>
@@ -307,7 +307,7 @@
         <div class="hero-content text-center">
             <h1 class="display-3 fw-bold">Master of Ceremony</h1>
             <p class="lead fs-4">Make your wedding unforgettable with our professional MC services.</p>
-            <a href="booking.html" class="btn btn-primary btn-lg mt-3">Book Now</a>
+            <a href="/booking" class="btn btn-primary btn-lg mt-3">Book Now</a>
         </div>
     </section>
 
@@ -320,19 +320,19 @@
                     <div id="mcCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="/frontend/allpack/mc/mcdata/ran1.jpg" class="d-block w-100" alt="MC Image 1">
+                                <img src="/allpack/mc/mcdata/ran1.jpg" class="d-block w-100" alt="MC Image 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(14).jpg" class="d-block w-100" alt="MC Image 2">
+                                <img src="/allpack/mc/mcdata/Webp.net-resizeimage(14).jpg" class="d-block w-100" alt="MC Image 2">
                             </div>
                             <div class="carousel-item">
-                                <img src="/frontend/allpack/mc/mcdata/mc.jpg" class="d-block w-100" alt="MC Image 3">
+                                <img src="/allpack/mc/mcdata/mc.jpg" class="d-block w-100" alt="MC Image 3">
                             </div>
                             <div class="carousel-item">
-                                <img src="/frontend/allpack/mc/mcdata/inganzo.jpg" class="d-block w-100" alt="MC Image 4">
+                                <img src="/allpack/mc/mcdata/inganzo.jpg" class="d-block w-100" alt="MC Image 4">
                             </div>
                             <div class="carousel-item">
-                                <img src="/frontend/allpack/mc/mcdata/Webp.net-resizeimage(10).jpg" class="d-block w-100" alt="MC Image 5">
+                                <img src="/allpack/mc/mcdata/Webp.net-resizeimage(10).jpg" class="d-block w-100" alt="MC Image 5">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#mcCarousel" data-bs-slide="prev">
@@ -393,22 +393,22 @@
             <h2 class="text-center mb-5" data-aos="fade-up">Gallery</h2>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
-                    <img src="/frontend/allpack/mc/mcdata/ranf.webp" class="img-fluid rounded" alt="MC Image 1">
+                    <img src="/allpack/mc/mcdata/ranf.webp" class="img-fluid rounded" alt="MC Image 1">
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
-                    <img src="/frontend/allpack/mc/mcdata/mc1.jpg" class="img-fluid rounded" alt="MC Image 2">
+                    <img src="/allpack/mc/mcdata/mc1.jpg" class="img-fluid rounded" alt="MC Image 2">
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
-                    <img src="/frontend/allpack/mc/mcdata/muvunyi.jpg" class="img-fluid rounded" alt="MC Image 3">
+                    <img src="/allpack/mc/mcdata/muvunyi.jpg" class="img-fluid rounded" alt="MC Image 3">
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
-                    <img src="/frontend/allpack/mc/mcdata/eric.jpeg" class="img-fluid rounded" alt="MC Image 3">
+                    <img src="/allpack/mc/mcdata/eric.jpeg" class="img-fluid rounded" alt="MC Image 3">
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
-                    <img src="/frontend/allpack/mc/mcdata/igihame2.jpeg" class="img-fluid rounded" alt="MC Image 3">
+                    <img src="/allpack/mc/mcdata/igihame2.jpeg" class="img-fluid rounded" alt="MC Image 3">
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="300">
-                    <img src="/frontend/allpack/mc/mcdata/kamanzi.jpg" class="img-fluid rounded" alt="MC Image 3">
+                    <img src="/allpack/mc/mcdata/kamanzi.jpg" class="img-fluid rounded" alt="MC Image 3">
                 </div>
             </div>
         </div>
