--- a/frontend/allpack/venues/venues.html
+++ b/frontend/allpack/venues/venues.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Decor</title>
+    <title>Decor</title>
     <!-- Bootstrap 5 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend/css/footer.css">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="/frontend/allpack/css/decor.css">
+   <link rel="stylesheet" href="/allpack/css/decor.css">
+
     <!-- Swiper.js CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <!-- Custom CSS -->
@@ -155,12 +156,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Packages</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Suppliers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Booking</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/packages">Packages</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/suppliers">Suppliers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/booking">Booking</a></li>
                 </ul>
             </div>
         </div>
@@ -168,25 +169,25 @@
     <section class="hero-section">
         <!-- Video Background -->
         <video autoplay muted loop>
-            <source src="/frontend/allpack/venues/venuesdata/Reception Decor Tanzania Wedding Decor Stage Decor Lovely Wedding.mp4" type="video/mp4">
+            <source src="/allpack/venues/venuesdata/Reception Decor Tanzania Wedding Decor Stage Decor Lovely Wedding.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <!-- Hero Content -->
         <div class="text-center">
             <h1>Transform Your Wedding with Stunning Decor</h1>
             <p class="lead">Discover breathtaking decor themes and services for your special day.</p>
-            <a href="#decor-themes" class="btn btn-light btn-lg">Explore Themes</a>
+            <a href="#themes" class="btn btn-light btn-lg">Explore Themes</a>
         </div>
     </section>  
   <!-- Wedding Decor Gallery Section -->
-<div class="container-fluid venue-gallery" id="decor-themes">
+<div class="container-fluid venue-gallery" id="themes">
     <h1 class="text-center mb-4">Wedding Decor Gallery</h1>
     <p class="text-center">Enchanting Wedding Decor – Crafting Dreamy Moments with Elegant Details!</p>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <!-- Decor 1 -->
         <div class="col">
             <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor1.jpeg" data-bs-title="Elegant Ballroom">
-                <img src="/frontend/allpack/venues/venuesdata/decor1.jpeg" alt="Decor 1">
+                <img src="/allpack/venues/venuesdata/decor1.jpeg" alt="Decor 1">
                 <div class="venue-overlay">
                     <div class="venue-info">Elegant Ballroom</div>
                 </div>
@@ -196,7 +197,7 @@
         <!-- Decor 2 -->
         <div class="col">
             <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor3.jpg" data-bs-title="Garden Paradise">
-                <img src="/frontend/allpack/venues/venuesdata/decor3.jpg" alt="Decor 2">
+                <img src="/allpack/venues/venuesdata/decor3.jpg" alt="Decor 2">
                 <div class="venue-overlay">
                     <div class="venue-info">Garden Paradise</div>
                 </div>
@@ -206,7 +207,7 @@
         <!-- Decor 3 -->
         <div class="col">
             <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor2.jpg" data-bs-title="Riverside Retreat">
-                <img src="/frontend/allpack/venues/venuesdata/decor2.jpg" alt="Decor 3">
+                <img src="/allpack/venues/venuesdata/decor2.jpg" alt="Decor 3">
                 <div class="venue-overlay">
                     <div class="venue-info">Riverside Retreat</div>
                 </div>
@@ -216,7 +217,7 @@
         <!-- Decor 4 -->
         <div class="col">
             <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor5.jpg" data-bs-title="Charming Chateau">
-                <img src="/frontend/allpack/venues/venuesdata/decor5.jpg" alt="Decor 4">
+                <img src="/allpack/venues/venuesdata/decor5.jpg" alt="Decor 4">
                 <div class="venue-overlay">
                     <div class="venue-info">Charming Chateau</div>
                 </div>
@@ -226,7 +227,7 @@
         <!-- Decor 5 -->
         <div class="col">
             <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/6.jpg" data-bs-title="Modern Loft">
-                <img src="/frontend/allpack/venues/venuesdata/6.jpg" alt="Decor 5">
+                <img src="/allpack/venues/venuesdata/6.jpg" alt="Decor 5">
                 <div class="venue-overlay">
                     <div class="venue-info">Modern Loft</div>
                 </div>
@@ -236,7 +237,7 @@
         <!-- Decor 6 -->
         <div class="col">
             <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor3.jpg" data-bs-title="Rustic Barn">
-                <img src="/frontend/allpack/venues/venuesdata/decor3.jpg" alt="Decor 6">
+                <img src="/allpack/venues/venuesdata/decor3.jpg" alt="Decor 6">
                 <div class="venue-overlay">
                     <div class="venue-info">Rustic Barn</div>
                 </div>
@@ -269,8 +270,8 @@
                 <!-- Slide 1 -->
                 <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c1.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c1.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c1.jpg">
+                            <img src="/allpack/venues/venuesdata/c1.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Elegant Floral Arrangements</h5>
@@ -281,8 +282,8 @@
                 <!-- Slide 2 -->
                 <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c2.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c2.jpg" alt="Wedding Decor 2" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c2.jpg">
+                            <img src="/allpack/venues/venuesdata/c2.jpg" alt="Wedding Decor 2" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Romantic Candlelight Setup</h5>
@@ -293,8 +294,8 @@
                 <!-- Slide 3 -->
                 <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c3.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c3.jpg" alt="Wedding Decor 3" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c3.jpg">
+                            <img src="/allpack/venues/venuesdata/c3.jpg" alt="Wedding Decor 3" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Luxurious Table Settings</h5>
@@ -305,8 +306,8 @@
                 <!-- Slide 4 -->
                 <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c4.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c4.jpg" alt="Wedding Decor 4" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c4.jpg">
+                            <img src="/allpack/venues/venuesdata/c4.jpg" alt="Wedding Decor 4" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Outdoor Garden Decor</h5>
@@ -317,8 +318,8 @@
                 <!-- Slide 5 -->
                 <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c5.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c5.jpg" alt="Wedding Decor 5" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c5.jpg">
+                            <img src="/allpack/venues/venuesdata/c5.jpg" alt="Wedding Decor 5" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Elegant Floral Arrangements</h5>
@@ -329,8 +330,8 @@
                 <!-- Slide 6 -->
                 <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c6.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c6.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c6.jpg">
+                            <img src="/allpack/venues/venuesdata/c6.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Boho Vibes, Endless Inspiration</h5>
@@ -341,8 +342,8 @@
                  <!-- Slide 6 -->
                  <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c7.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c7.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c7.jpg">
+                            <img src="/allpack/venues/venuesdata/c7.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Transform Your Space with Style</h5>
@@ -353,8 +354,8 @@
                  <!-- Slide 6 -->
                  <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c8.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c8.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c8.jpg">
+                            <img src="/allpack/venues/venuesdata/c8.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Luxury Décor, Crafted for You</h5>
@@ -365,8 +366,8 @@
                  <!-- Slide 6 -->
                  <div class="swiper-slide">
                     <div class="card">
-                        <a href="/frontend/allpack/venues/venuesdata/c9.jpg">
-                            <img src="/frontend/allpack/venues/venuesdata/c9.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        <a href="/allpack/venues/venuesdata/c9.jpg">
+                            <img src="/allpack/venues/venuesdata/c9.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
                             <h5 class="card-title">Simple Touch, Stunning Spaces</h5>
