--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -73,52 +73,56 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card">
-        <a href="/frontend/allpack/venues/venues.html">
+        <a href="/decor">
         <img src="/assethome/venu3.jpg" class="card-img-top" alt="...">
         </a>
         <div class="card-body d-flex flex-column">
           <h5 class="card-title mb-2">Venue & Decor</h5>
-          <a href="/frontend/allpack/venues/venues.html" class="btn btn-primary">Read More</a>
+          <a href="/decor" class="btn btn-primary">Read More</a>
         </div>
       </div>
     </div>
   <div class="col-md-4">
     <div class="card " >
-
+     <a href="/invetation">
       <img src="/assethome/inv1.jpg" class="card-img-top" alt="...">
+      </a>
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-2">Invitation Card</h5>
-        <a href="#" class="btn btn-primary">Read More</a>
+        <a href="/invetation" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </div>
   <div class="col-md-4">
     <div class="card " >
-
+       <a href="/styles">
       <img src="/assethome/dres.jpg" class="card-img-top" alt="...">
+      </a>
       <div class="card-body d-flex flex-column">
-        <h5 class="card-title mb-2">Style</h5>
-        <a href="/frontend/allpack/st/st.html" class="btn btn-primary">Read More</a>
+        <h5 class="card-title mb-2">styles</h5>
+        <a href="/styles" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </div>
   <div class="col-md-4">
     <div class="card " >
-
+     <a href="/beauty">    
       <img src="/assethome/beaty.jpg" class="card-img-top" alt="...">
+    </a> 
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-2">Beaty</h5>
-        <a href="#" class="btn btn-primary">Read More</a>
+        <a href="/beauty" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </div>
   <div class="col-md-4">
     <div class="card " >
-
+     <a href="/mc">
       <img src="/assethome/mc.jpg" class="card-img-top" alt="...">
+      </a>
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-2">MC</h5>
-        <a href="#" class="btn btn-primary">Read More</a>
+        <a href="/mc" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </div>
@@ -127,12 +131,12 @@
   
   <div class="col-md-4">
     <div class="card " >
-      <a href="/frontend/allpack/indinzi/troup/indinzi.html">
+      <a href="/troupe">
         <img src="/assethome/aime.jpg" class="card-img-top" alt="Troupe">
       </a>
       <div class="card-body d-flex flex-column">
         <h5 class="card-title mb-2">Troupe</h5>
-        <a href="/frontend/allpack/indinzi/troup/indinzi.html" class="btn btn-primary">Read More</a>
+        <a href="/troupe" class="btn btn-primary">Read More</a>
       </div>
     </div>
   </div>
